crates/vox-compiler/tests/snapshots/reactive_smoke_test__island_mount_hir_fragment_z.snap
---
source: crates/vox-compiler/tests/reactive_smoke_test.rs
assertion_line: 163
expression: hir
---
<div data-vox-island="Z" data-prop-title={"hi"} />
