crates/vox-compiler/tests/snapshots/reactive_smoke_test__panel_tsx_island_mount_attrs.snap
---
source: crates/vox-compiler/tests/reactive_smoke_test.rs
assertion_line: 390
expression: ts
---
import React, { useState } from "react";

export function Panel(): React.ReactElement {
  const [label, set_label] = useState("Hello");
  return (
<div className={["flex", "flex-col", "wrap"].filter(Boolean).join(" ")}
>
  <div data-vox-island="DataChart" data-prop-title={label} />
</div>
  );
}
